<resources>
    <string name="app_name">Stocks</string>
    <string name="action_settings">Settings</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_image">button_image</string>
    <string name="chart">Chart</string>
    <string name="news">News</string>
    <string name="stats">Stats</string>
    <string name="open">OPEN</string>
    <string name="high">HIGH</string>
    <string name="low">LOW</string>
    <string name="_52_wk_high">52 WK HIGH</string>
    <string name="_52_wk_low">52 WK LOW</string>
    <string name="div_rate">DIV RATE</string>
    <string name="volume">VOLUME</string>
    <string name="avg_vol">AVG VOL</string>
    <string name="mkt_cap">MKT CAP</string>
    <string name="p_e_ratio">P/E RATIO</string>
    <string name="ytd">YTD</string>
    <string name="div_yield">DIV YIELD</string>
    <string name="earnings">Earnings</string>
    <string name="financial">Financial</string>
    <string name="report_date">REPORT DATE</string>
    <string name="gross_profit">GROSS PROFIT</string>
    <string name="cost_of_revenue">COST OF REVENUE</string>
    <string name="operating_revenue">OPERATING REVENUE</string>
    <string name="total_revenue">TOTAL REVENUE</string>
    <string name="operating_income">OPERATING INCOME</string>
    <string name="net_income">NET INCOME</string>
    <string name="r_and_d">R and D</string>
    <string name="operating_expanse">OPERATING EXPANSE</string>
    <string name="current_assets">CURRENT ASSETS</string>
    <string name="total_assets">TOTAL ASSETS</string>
    <string name="current_cash">CURRENT CASH</string>
    <string name="total_cash">TOTAL CASH</string>
    <string name="cash_flow">CASH FLOW</string>
    <string name="about">About</string>
    <string name="_1d">1D</string>
    <string name="_1m">1M</string>
    <string name="_3m">3M</string>
    <string name="_1y">1Y</string>
    <string name="_5y">5Y</string>
    <string name="search_title">search</string>
    <string name="no_match">No Match Found</string>
    <string name="long_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer malesuada a urna sed commodo. Nunc tincidunt maximus nisi, nec lacinia ligula posuere vitae. In hac habitasse platea dictumst. Cras ut augue lectus. Etiam ac ligula vitae lectus blandit tincidunt a eu ipsum. Nulla facilisi. Curabitur nec elit vitae justo rhoncus pretium non at quam. Fusce posuere volutpat placerat. Nulla facilisi. Proin cursus lacus a felis volutpat, ac congue sapien posuere. Nam euismod neque erat, sit amet porttitor lacus pulvinar eu. Nulla quis ipsum ac odio placerat interdum. Aenean ornare sem nec lectus ornare, ac rhoncus odio feugiat. Donec nibh sapien, dignissim nec elit vitae, hendrerit egestas felis. Praesent sem sapien, rutrum vitae neque vitae, euismod ultrices sapien. Proin tempus magna vel velit scelerisque, at dapibus velit fringilla. Nullam eu risus venenatis, dapibus quam eu, pretium purus. Nullam eget metus lectus. Maecenas tempor ligula nibh, ac gravida nisl lacinia non. Aenean placerat, nibh id finibus consectetur, eros mauris rhoncus odio, quis fringilla nisi elit vitae sem. Duis sit amet odio congue, pellentesque ligula ut, blandit nibh. Curabitur vel justo velit. In varius interdum risus, vitae auctor risus pulvinar sed. Donec volutpat nunc quam, sed vestibulum nibh scelerisque vel. Aliquam lectus est, commodo quis aliquam sit amet, consectetur sed elit. Curabitur eget purus et turpis commodo ornare nec eu diam. Sed lorem augue, dapibus nec sapien a, malesuada commodo metus. Vestibulum gravida hendrerit dui, a bibendum quam malesuada sagittis. Mauris eget fringilla felis. Phasellus eget massa sapien. Nunc vel dolor pulvinar, vulputate diam pellentesque, suscipit enim. Praesent eget mi vestibulum, vulputate eros ut, condimentum ligula. Suspendisse potenti. Sed ac semper nisl, eget ornare est. Vivamus purus elit, elementum quis pretium vitae, dignissim sit amet purus. Nulla ornare ante elit. Nunc fermentum sapien consectetur enim eleifend aliquam. Suspendisse potenti. Morbi nec nisl nibh. Morbi vitae ornare neque, eget commodo est. Curabitur aliquet mollis felis, vel rhoncus magna ultrices nec. Vivamus rutrum urna et lorem pharetra, non rutrum nibh finibus. Cras luctus molestie odio sed auctor. Nunc ligula elit, ultrices quis leo nec, vulputate pretium orci. Fusce eget quam sapien. Mauris cursus nec tortor et tincidunt. Mauris sit amet purus tellus. Sed sit amet porttitor diam, ut faucibus leo. Nullam sollicitudin leo non sem ultricies placerat. Morbi eu scelerisque risus. Vivamus tortor eros, feugiat quis aliquet in, blandit vel ante. Sed porttitor turpis vitae mauris consectetur ornare. Donec lacinia orci mauris. Sed condimentum tellus sit amet dapibus mattis. Fusce posuere ex eu finibus interdum. Etiam id mauris porta, eleifend elit ut, euismod arcu. Etiam a tortor ac risus tincidunt tincidunt sit amet eget libero. In dignissim in eros sed condimentum. Suspendisse suscipit eget urna nec aliquam. Aliquam pellentesque tincidunt nisl. Nam non accumsan velit, ac faucibus lacus. Praesent ut nunc ullamcorper, mattis diam nec, fermentum erat. Curabitur justo nisi, vehicula a volutpat nec, ornare in ligula. Praesent elit nulla, gravida dictum hendrerit tristique, malesuada quis mauris. Nunc blandit nunc metus. Nulla non ornare lacus, et tempus ante. Nunc laoreet augue ligula, quis sagittis magna pulvinar in. In pellentesque aliquet nunc in sagittis. Curabitur fringilla eros volutpat libero malesuada, non consectetur neque dignissim. Aliquam nec leo sed urna blandit tincidunt. Morbi facilisis feugiat erat, vitae suscipit nisl dapibus id. Donec efficitur iaculis arcu quis maximus. Ut viverra ligula placerat velit molestie, nec molestie enim viverra. Mauris lacus augue, tincidunt nec neque sed, aliquam facilisis libero. Suspendisse potenti. Duis vitae viverra diam, quis malesuada arcu. Quisque lorem ante, dignissim non hendrerit ac, iaculis at dolor. Cras consectetur vitae dui et porttitor. Donec faucibus sit amet nisi eu iaculis. Nulla vel lectus lacinia, pharetra sem at, convallis massa. Phasellus dignissim nisl diam, sit amet lobortis urna lacinia nec. Nam convallis finibus vehicula. Fusce imperdiet nibh nec enim pulvinar, eu imperdiet nisl lobortis. Curabitur tincidunt elit sapien. Praesent sed placerat ipsum. Mauris massa massa, placerat nec consectetur a, tristique a nulla. Nam sem sem, bibendum ac sem ut, malesuada tempus orci. Nulla fermentum ante nec augue congue, sit amet elementum quam finibus. Mauris dapibus, ante nec viverra feugiat, urna augue feugiat orci, laoreet vehicula libero quam auctor justo. Nulla non mauris semper, hendrerit lectus quis, fringilla neque. Integer sed aliquet nisl, nec tempor ante. Curabitur feugiat volutpat pretium. Sed in mollis urna. Etiam libero purus, dapibus eu sem a, venenatis porttitor arcu. Aenean finibus eleifend venenatis. Nunc dictum mauris et mi condimentum, quis mollis nisl ullamcorper. Curabitur porttitor ex mauris, a placerat magna auctor in. Sed eget arcu sed odio rutrum lobortis in vitae nisi. Vivamus convallis luctus orci, varius sollicitudin urna. In lobortis lobortis eros, vitae sodales purus accumsan vitae. Vestibulum at leo venenatis, bibendum odio at, laoreet leo. Nulla facilisi. Aliquam erat volutpat. Quisque nec justo tincidunt, viverra nulla quis, feugiat tellus. Nulla commodo ipsum sit amet lacus vehicula, sit amet dignissim mi feugiat. Vestibulum blandit nunc non nisl semper luctus. Sed mattis imperdiet magna vitae gravida. Cras consectetur massa et metus porta, eu scelerisque sem cursus. Donec accumsan urna at magna consequat dictum. Proin fringilla nibh dictum, euismod erat in, gravida massa. Nunc varius ipsum metus, at vulputate nibh sagittis sit amet. Phasellus eleifend ut nisl at imperdiet. Suspendisse efficitur quis orci sed vestibulum. Donec semper nunc nisl, eget ullamcorper ipsum maximus ullamcorper. In egestas nunc non neque sollicitudin, nec faucibus mauris semper. Aliquam erat volutpat. Praesent sit amet risus ultricies, ultrices nulla ac, vestibulum purus. Nunc convallis gravida ornare. Cras in tellus sed purus molestie pretium. Quisque pretium imperdiet felis, ac dapibus erat. Aenean arcu orci, cursus bibendum dui vel, molestie consectetur ante. Nulla eget leo neque. Maecenas venenatis metus vitae purus feugiat consectetur. Proin sollicitudin, lacus eu pulvinar fringilla, urna purus dignissim nunc, ac faucibus leo libero ut neque. Mauris eleifend nulla in sapien ullamcorper lobortis. Nulla tempus elit eu tellus imperdiet, nec finibus lacus consequat. Nulla condimentum pellentesque elementum. Aliquam condimentum et lorem sed dictum. Aliquam laoreet nulla nec pulvinar maximus. Sed nec semper nunc, ultrices ornare libero. Donec blandit ut diam nec pulvinar. Nunc vel aliquam justo. Vivamus luctus, neque ut fringilla sollicitudin, massa lectus dictum libero, consequat malesuada purus urna a purus. Etiam scelerisque sagittis mi, ac commodo sem tincidunt eget. Praesent neque massa, convallis vel vehicula sit amet, lobortis eget ex. Nam eu venenatis ex. Sed tincidunt rutrum tortor quis eleifend. Nam semper, lorem ac euismod congue, lorem nisi ultricies nisi, ut tempor eros libero non leo. In efficitur enim enim, dignissim tristique leo tincidunt et. Nullam vestibulum purus ut sodales maximus. Nam tempus interdum sapien eu accumsan. Proin faucibus cursus velit, tristique pretium velit venenatis in. In at porta nunc. Suspendisse scelerisque eu mi suscipit dapibus. Donec eget placerat dolor, at ullamcorper dui. Suspendisse ante nisi, dictum id ante vel, suscipit tincidunt dui. Phasellus vel neque non arcu suscipit scelerisque id sit amet felis. Vestibulum at eros eget sem maximus accumsan non et nunc. Interdum et malesuada fames ac ante ipsum primis in faucibus. Phasellus suscipit, orci et tincidunt commodo, sapien ipsum congue sem, et ultricies dui nibh id quam. Nullam nisi nulla, cursus eu metus non, scelerisque efficitur elit. Proin eget tincidunt turpis, euismod accumsan elit. Maecenas efficitur nisi vitae magna pharetra porta. Aliquam mollis tellus nec nibh fringilla vulputate. Etiam lacinia, dolor quis viverra iaculis, nisl nisi viverra lectus, nec semper neque nulla consequat justo. Quisque nec augue sed tellus dignissim ullamcorper. In egestas quis augue sed lobortis. Sed id semper nulla. Sed a lectus mattis, lobortis mauris a, molestie felis. In sed sapien non arcu viverra vulputate eget sit amet libero. Sed tristique tellus tempor erat congue, sit amet sagittis neque congue. Integer suscipit bibendum justo, ut feugiat nunc interdum posuere. Suspendisse cursus accumsan pretium. Donec quis tellus velit. Integer ac sem eget est vestibulum varius at non nisi. Pellentesque nec laoreet magna.</string>
</resources>
