<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <RelativeLayout
            android:id="@+id/image_label1"
            style="@style/TextAppearance.Image">

            <ImageView
                android:id="@+id/myImageView"
                style="@style/TextAppearance.ImageImage"/>

            <TextView
                android:text="Graph"
                android:layout_alignStart="@+id/myImageView"
                android:layout_alignTop="@+id/myImageView"
                android:layout_alignEnd="@+id/myImageView"
                android:layout_alignBottom="@+id/myImageView"
                style="@style/TextAppearance.ImageLabel"/>
        </RelativeLayout>

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/stock_detail_graph"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:layout_constraintTop_toBottomOf="@+id/image_label1"/>

        <com.github.gabrielgouv.customizablebuttons.CustomizableButton
            android:id="@+id/chart_button_1D"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:textColor="@color/grey1"
            app:cb_backgroundColorNormal="@color/black2"
            app:layout_constraintTop_toBottomOf="@+id/stock_detail_graph"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/chart_button_1M"
            android:text="@string/_1d"/>

        <com.github.gabrielgouv.customizablebuttons.CustomizableButton
            android:id="@+id/chart_button_1M"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:textColor="@color/grey1"
            app:cb_backgroundColorNormal="@color/black2"
            app:layout_constraintTop_toBottomOf="@+id/stock_detail_graph"
            app:layout_constraintLeft_toRightOf="@+id/chart_button_1D"
            app:layout_constraintRight_toLeftOf="@+id/chart_button_3M"
            android:text="@string/_1m"/>

        <com.github.gabrielgouv.customizablebuttons.CustomizableButton
            android:id="@+id/chart_button_3M"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:textColor="@color/grey1"
            app:cb_backgroundColorNormal="@color/black2"
            app:layout_constraintTop_toBottomOf="@+id/stock_detail_graph"
            app:layout_constraintLeft_toRightOf="@+id/chart_button_1M"
            app:layout_constraintRight_toLeftOf="@+id/chart_button_1Y"
            android:text="@string/_3m"/>

        <com.github.gabrielgouv.customizablebuttons.CustomizableButton
            android:id="@+id/chart_button_1Y"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:textColor="@color/grey1"
            app:cb_backgroundColorNormal="@color/black2"
            app:layout_constraintTop_toBottomOf="@+id/stock_detail_graph"
            app:layout_constraintLeft_toRightOf="@+id/chart_button_3M"
            app:layout_constraintRight_toLeftOf="@+id/chart_button_5Y"
            android:text="@string/_1y"/>

        <com.github.gabrielgouv.customizablebuttons.CustomizableButton
            android:id="@+id/chart_button_5Y"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:textColor="@color/grey1"
            app:cb_backgroundColorNormal="@color/black2"
            app:layout_constraintTop_toBottomOf="@+id/stock_detail_graph"
            app:layout_constraintLeft_toRightOf="@+id/chart_button_1Y"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/_5y"/>

    </android.support.constraint.ConstraintLayout>
</layout>
